--- a/page/sad-labs-next/src/app/globals.css
+++ b/page/sad-labs-next/src/app/globals.css
@@ -332,6 +332,12 @@ body.light-mode {
     font-size: 2rem;
   }
 
+  .section-container {
+    max-width: 60rem;
+    width: 100%;
+    margin: 0 auto;
+  }
+
   .section-text {
     text-align: center;
     max-width: 100%;
