--- a/page/sad-labs-next/src/app/page.module.css
+++ b/page/sad-labs-next/src/app/page.module.css
@@ -566,7 +566,7 @@
 
   .heroTitle {
     --offsetScale: 0.3;
-    font-size: 2.1rem;
+    font-size: 2.5rem;
   }
 
 
